# CashFlowTracker

./: .flake8  README.md  config.py  db.json  main.py  pyproject.toml  requirements.txt
business_logic/: exceptions.py
business_logic/dto/: __init__.py  operation.py
business_logic/services/: __init__.py  balance.py  operation.py
data_access/: dao.py  exceptions.py
presentation/: __init__.py  exceptions.py  paginate.py  ui.py  validators.py
tests/: test_app.py
tests/test_services/: test_balance.py  test_operation.py
tests/test_validators/: test_validators.py
