[tool.poetry]
name = "cashflowtracker"
version = "0.1.0"
description = ""
authors = ["san0kq <sanromanov94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"


[tool.black]
target-version = ["py312"]
line-length = 79


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
